crates/aranya-policy-compiler/tests/data/misc/serialize_invalid_expression.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid expression
  |
5 | function err(f struct Foo) bytes {
6 |     return serialize(f)
  |            ^^^^^^^^^^^^ 'serialize' can only be used in the 'seal' block of a command
7 | }
  |
